# orders-example

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: alembic.ini  depends.py  main.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 342c53d2e66d_add_orders.py
src/api/v1/: orders.py
src/db/: db.py
src/events/: create_topics.py  kafka_topics.py  publisher.py  schemas.py
src/models/: orders.py
src/repositories/: abc_repositories.py  orders_repository.py
src/schemas/: order.py
src/services/: orders_service.py
